--- a/index.html
+++ b/index.html
@@ -7,12 +7,32 @@
     <link rel="stylesheet" href="/styles/style.css">
     <link rel="resetsheet" href="/styles/reset.css">
     <link rel="shortcut icon" type="image/ico" href="/assets/Logo.ico"/>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
     <header class="cabecalho">
         <div class="container menu">
-            <span class="cabecalho__menu-hamburguer container__imagem"></span>
+                <input type="checkbox" id="menu" class="container__botao">
+                <label for="menu">
+                    <span class="cabecalho__menu-hamburguer container__imagem"></span>
+                </label>
+                <ul class="lista-menu">
+                    <li class="lista-menu__titulo">CATEGORIAS</li>
+                    <li class="lista-menu__itens">
+                        <a class="lista-menu__link" href="#">PROGRAMAÇÃO</a>
+                    </li>
+                    <li class="lista-menu__itens">
+                        <a class="lista-menu__link" href="#">FRONT-END</a>
+                    </li>
+                    <li class="lista-menu__itens">
+                        <a class="lista-menu__link" href="#">INFRAESTRUTURA</a>
+                    </li>
+                    <li class="lista-menu__itens">
+                        <a class="lista-menu__link" href="#">BUSINESS</a>
+                    </li>
+                    <li class="lista-menu__itens">
+                        <a class="lista-menu__link" href="#">DESING & UX</a>
+                    </li>
+                </ul>
             <img class="container__imagem" src="/assets/Logo.svg" alt="Logo da Alurabooks">
         </div>
         <div class="container">
@@ -23,6 +43,11 @@
     </header>
 
     <main>
+        <section class="banner">
+            <h2 class="banner__titulo">Já sabe por onde começar?</h2>
+            <p class="banner__texto">Encontre em nossa estante o que precisa para seu desenvolvimento!</p>
+            <input type="search" class="banner__pesquisa" placeholder="Qual será sua próxima leitura?">
+        </section>
     </main>
     
     <footer></footer>
