--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>AluraBooks</title>
     <link rel="stylesheet" href="/styles/style.css">
     <link rel="resetsheet" href="/styles/reset.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
     <link rel="shortcut icon" type="image/ico" href="/assets/Logo.ico"/>
 </head>
 <body>
@@ -48,8 +49,12 @@
             <p class="banner__texto">Encontre em nossa estante o que precisa para seu desenvolvimento!</p>
             <input type="search" class="banner__pesquisa" placeholder="Qual será sua próxima leitura?">
         </section>
+        <section class="carossel">
+            <h2 class="carossel__titulo">últimos lançamentos</h2>
+        </section>
     </main>
     
     <footer></footer>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 </body>
 </html>
